# BeerEX

./: .dockerignore  .dropbox  .env.example  .gitignore  .gitmodules  .travis.yml  BeerEX - the Beer EXpert system.tex  BeerEX.bot.py  BeerEX.clp  BeerEX.py  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  facts  main.py  pyproject.toml  ratings.p  requirements.txt
.github/workflows/: ci.yml
clips/: beer-data.clp  beer-fuzzy.clp  beer-knowledge.clp  beer-questions.clp  beer-ranges.clp  beer-selection.clp  beer-styles.clp  beer-styles.fct  beerex-fuzzy.clp  beerex.clp  dialog.clp  gui-interaction.clp  labels-it.clp
clipsrc/: beer-knowledge.clp  beer-styles.fct  beerex.clp
data/: beer-style-ranges.csv  beer-styles.csv
deploy/: .env.example  README.md  docker-compose.yml
doc/: BeerEX.tex
doc/sections/: bibliography.tex  conceptualization.tex  domain.tex  identification.tex  implementation.tex  introduction.tex  usage.tex  validation.tex
scripts/: build-clips.sh  extract_kb.py  extract_ranges.py
tests/: test-cf-vs-fuzzy.sh  test-scoring.clp  test_engine.py
