[project]
name = "beerex"
version = "2.0.0"
description = "BeerEX — a rule-based beer expert system (CLIPS) with a fuzzy backend, as a Telegram bot"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Donato Meoli" }]
# clipspy / python-telegram-bot do not support Python 3.13+ yet.
requires-python = ">=3.10,<3.13"
dependencies = [
    "clipspy>=1.0",
    "emoji>=2",
    "python-telegram-bot>=21",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
